After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 77682 - Press page down, do New Unshared, and then all row labels disappear.
Press page down, do New Unshared, and then all row labels disappear.
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
git master
Other All
: High major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-04-05 04:21 UTC by Jacob Burckhardt
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jacob Burckhardt 2002-04-05 04:21:17 UTC
1. Start gnumeric.
2. Press the page down key three times.
3. In the View menu, select New Unshared.

All of the row labels disappear.

This happens in gnumeric 1.0.5.
Comment 1 Jody Goldberg 2002-04-23 03:08:36 UTC
this is present in 1.0 and 1.1 It should be fixed before 1.0.7
Comment 2 Jody Goldberg 2002-04-29 22:12:22 UTC
Fixed in 1.1 and 1.0